[package]
name = "litedown-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nom]
version = "7"
default-features = false
features = ["alloc"]

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome"}
anyhow = "1.0"
